--- a/client/src/components/Nav/Nav.module.css
+++ b/client/src/components/Nav/Nav.module.css
@@ -3,17 +3,21 @@
   flex-direction: column;
   width: 300px;
 }
+.nav a {
+  text-decoration: none;
+  color: black;
+}
+.nav a:hover {
+  color: inherit;
+}
 
 .navrow {
   display: flex;
   gap: 10px;
   padding: 10px;
 }
-
-.navrow a {
-  text-decoration: none;
-  color: black;
-}
-.navrow a:hover {
-  color: inherit;
+.navrow:hover {
+  cursor: pointer;
+  background-color: rgb(210, 210, 210);
+  border-radius: 10px;
 }
