--- a/client/src/App.css
+++ b/client/src/App.css
@@ -30,5 +30,14 @@ h3 {
 .feed-pfp {
   border-radius: 50%;
   width: 50px;
+  height: 50px;
   display: flex;
+}
+
+.link-no-decoration {
+  text-decoration: none;
+  color: black;
+}
+.link-no-decoration:hover {
+  color: black;
 }
